@@ -15,7 +15,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import net.lingala.zip4j.ZipFile;
@@ -65,9 +64,9 @@ public class SettingsImporter {
     CoursesClient.fetch(ideSettingsUrl, file);
     String configPath = FileUtilRt.toSystemIndependentName(PathManager.getConfigPath());
     StartupActionScriptManager.addActionCommands(
-        Arrays.asList(
-            new StartupActionScriptManager.UnzipCommand(file, new File(configPath)),
-            new StartupActionScriptManager.DeleteCommand(file)
+        List.of(
+            new StartupActionScriptManager.UnzipCommand(file.toPath(), Path.of(configPath)),
+            new StartupActionScriptManager.DeleteCommand(file.toPath())
         )
     );
 
